# trainer-bot

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  INSTRUCTIONS.md  LICENSE  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: ci.yml
scripts/: init_db.py  smoke_test.py
src/trainer_bot/: __init__.py  __main__.py  config.py
src/trainer_bot/bot/: __init__.py  app.py  auth.py  formatting.py  handlers.py
src/trainer_bot/intervals/: __init__.py  client.py  errors.py  schemas.py
src/trainer_bot/llm/: __init__.py  agent.py  client.py  prompts.py  tools.py
src/trainer_bot/storage/: __init__.py  db.py  models.py  repositories.py
src/trainer_bot/utils/: logging.py  ratelimit.py
tests/: conftest.py  test_agent_loop.py  test_config.py  test_formatting.py  test_handlers.py  test_intervals_client.py  test_ratelimit.py  test_repositories.py  test_tools.py
